<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.DashboardActivity"
    android:background="@color/whiteSmoke">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:text="Friends"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        tools:ignore="HardcodedText" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginTop="30dp"
        >

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">


            <LinearLayout
                android:id="@+id/LinearLayout_AFR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <EditText
                    android:id="@+id/Send_FR_username"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="Enter a username"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText"/>
                <ImageView
                    android:id="@+id/Send_FR"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="Send message button"
                    android:src="@drawable/send"
                    tools:ignore="HardcodedText"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_VFR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ConstraintLayout_VFR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/TextView_VFR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Friend Requests"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="HardcodedText" />
                    <ImageView
                        android:id="@+id/ImageView_VFR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/expand_less"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="expand section"
                        tools:ignore="HardcodedText" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:id="@+id/Container_FR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp">


                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/LinearLayout_VF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ConstraintLayout_VF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:id="@+id/TextView_VF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Friends"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="HardcodedText" />
                    <ImageView
                        android:id="@+id/ImageView_VF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/expand_less"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="expand section"
                        tools:ignore="HardcodedText"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:id="@+id/Container_F"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp">

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/LinearLayout_VG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ConstraintLayout_G"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/TextView_G"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Groups"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="HardcodedText" />
                    <ImageView
                        android:id="@+id/ImageView_G"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/expand_less"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="expand section"
                        tools:ignore="HardcodedText"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:id="@+id/Container_G"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp">

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/LinearLayout_P"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ConstraintLayout_P"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/TextView_P"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pending requests"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="HardcodedText" />
                    <ImageView
                        android:id="@+id/ImageView_P"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/expand_less"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="expand section"
                        tools:ignore="HardcodedText"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:id="@+id/Container_P"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp">

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
