<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entry.MainActivity"
    android:background="@color/whiteSmoke">

    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="225dp"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/Login_Username"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        android:autofillHints="username|email"
        android:hint="Email / Username"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:padding="20dp"
        android:background="@drawable/btn_background_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppName"
        android:layout_marginTop="20dp"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <EditText
        android:id="@+id/Login_Password"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:padding="20dp"
        android:background="@drawable/btn_background_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Username"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoginButton"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/btn_background_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Password"
        tools:ignore="HardcodedText"/>

    <TextView
        android:id="@+id/Forgot_Details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot your login details? "
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/LoginButton"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/Login_Help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Get help logging in."
        android:textColor="@color/hippieBlue"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/Forgot_Details"
        app:layout_constraintTop_toTopOf="@+id/Forgot_Details"
        tools:ignore="HardcodedText" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/Login_Help"
        android:layout_marginTop="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/No_Account" />

    <TextView
        android:id="@+id/No_Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account? "
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/LoginButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="30dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create an account."
        android:textColor="@color/hippieBlue"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/No_Account"
        app:layout_constraintTop_toTopOf="@+id/No_Account"
        tools:ignore="HardcodedText" />

    <ProgressBar
        android:id="@+id/ProgressBar"
        android:visibility="gone"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:translationZ="90dp"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/BlizzardBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
