<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/flashcards"
        android:icon="@drawable/space_dashboard"
        android:title=""
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction, HardcodedText" />

    <item
        android:id="@+id/friends"
        android:icon="@drawable/group"
        android:title=""
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction, HardcodedText" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/account_circle"
        android:title=""
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction, HardcodedText" />

    <item
        android:id="@+id/minigames"
        android:icon="@drawable/games_controller"
        android:title=""
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction, HardcodedText"
        />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title=""
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction, HardcodedText" />
</menu>
