...
                    android:text="Username"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    tools:ignore="HardcodedText"/>
                <TextView
                    android:id="@+id/ProfileUsername"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Username"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
...
                    android:text="Email"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    tools:ignore="HardcodedText"/>
                <TextView
                    android:id="@+id/ProfileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="email"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
...
